[package]
name = "example"
version = "0.1.0"
description = ""
edition = { workspace = true }

[dependencies]
tokio = { version = "1", features = ["full"] }
jupiter-swap-api-client-erichy-dev = { path = "../jupiter-swap-api-client" }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
bincode = "1.3.3"